Partial_14Dec2021/force-app/main/default/objects/Bill_item__c/Bill_item__c.object-meta.xml
<CustomObject>
    <label>Bill scheme product</label>
    <nameField>
        <label>Bill scheme product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill scheme products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>