Partial_14Dec2021/force-app/main/default/objects/Bill_item__c/fields/Bill_breakup__c.field-meta.xml
<CustomField>
    <fullName>Bill_breakup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill breakup</label>
    <referenceTo>Bill_breakup__c</referenceTo>
    <relationshipLabel>Bill scheme products</relationshipLabel>
    <relationshipName>Bill_scheme_products</relationshipName>
    <type>Lookup</type>
</CustomField>