Partial_14Dec2021/force-app/main/default/objects/Bill_item__c/fields/iep_product__c.field-meta.xml
<CustomField>
    <fullName>iep_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IEP Product</label>
    <referenceTo>IEP_Product__c</referenceTo>
    <relationshipLabel>Bill scheme products</relationshipLabel>
    <relationshipName>Bill_scheme_products</relationshipName>
    <type>Lookup</type>
</CustomField>