Partial_14Dec2021/force-app/main/default/objects/Bill_item__c/fields/Points_earned__c.field-meta.xml
<CustomField>
    <fullName>Points_earned__c</fullName>
    <label>Points</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>