Partial_14Dec2021/force-app/main/default/objects/Bill_item__c/fields/qr_code__c.field-meta.xml
<CustomField>
    <fullName>qr_code__c</fullName>
    <label>QR code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>